--- a/manifest.json
+++ b/manifest.json
@@ -1,20 +1,18 @@
 {
-  "name": "Todo App",
-  "short_name": "Todo",
-  "description": "A dark-mode neumorphic todo app with golden elegance.",
+  "name": "ToDo App",
+  "short_name": "ToDo",
   "start_url": ".",
   "display": "standalone",
-  "orientation": "portrait",
   "background_color": "#1f1f1f",
-  "theme_color": "#1f1f1f",
+  "theme_color": "#FFD700",
   "icons": [
     {
-      "src": "icons/icon-192.png",
+      "src": "icon-192.png",
       "sizes": "192x192",
       "type": "image/png"
     },
     {
-      "src": "icons/icon-512.png",
+      "src": "icon-512.png",
       "sizes": "512x512",
       "type": "image/png"
     }
